#8: HealthCheck added to OpenApi divided by tag, LoggerConfig changed to unexported, review based refactoring
