# cmd/aznum2words-webapp/api/health/health-api.go
@@ -1,0 +1,13 @@
+package health
+
+import (
+	"github.com/labstack/echo/v4"
+	"net/http"
+)
+
+type Api struct {
+}
+
+func (a *Api) GetHealth(ctx echo.Context) error {
+	return ctx.NoContent(http.StatusOK)
+}
