# cmd/aznum2words-webapp/handler/health-handler.go
@@ -1,10 +1,0 @@
-package handler
-
-import (
-	"github.com/labstack/echo/v4"
-	"net/http"
-)
-
-func (h *Handler) Health(c echo.Context) error {
-	return c.NoContent(http.StatusOK)
-}
